# OpenSAE

./: LICENSE  README.md  pyproject.toml
examples/: train.sh
src/opensae/: __init__.py  config_utils.py  sae_utils.py  sparse_activation.py  sparse_kernels.py  transformer_with_sae.py  viz_utils.py
src/opensae/patch_models/: __init__.py
src/opensae/saes/: __init__.py
src/opensae/saes/open_sae/: __init__.py  configuration_open_sae.py  modeling_open_sae.py
src/opensae/trainer/: __main__.py  sae_trainer.py  train_arguments.py  train_utils.py
src/opensae/trainer/patch_transformers/: patch_llama.py
